fix gap flex basis

--- a/src/sass/grid/_gridFlex.scss
+++ b/src/sass/grid/_gridFlex.scss
@@ -578,5 +578,107 @@ $gutter: 20px; // Define columns gutter
       }
     }
 
+    .col{
+      flex-grow: unset;
+      flex-basis: unset;
+      flex-shrink: unset;
+    }
+
+    @for $i from 0 through 12 {
+      $width: 100% / 12 * $i;
+  
+      .col-#{$i} {
+        width: $width;
+      }
+    }
+    @include responsive("xbig") {
+      @for $i from 0 through 12 {
+        $width: 100% / 12 * $i;
+  
+        .col-xb-#{$i},
+        .xb\:col-#{$i} {
+          width: $width;
+        }
+      }
+    }
+    @include responsive("large") {
+      @for $i from 0 through 12 {
+        $width: 100% / 12 * $i;
+  
+        .col-l-#{$i},
+        .lg\:col-#{$i} {
+          width: $width;
+        }
+      }
+    }
+    @include responsive("medium") {
+      @for $i from 0 through 12 {
+        $width: 100% / 12 * $i;
+  
+        .col-m-#{$i},
+        .md\:col-#{$i} {
+          width: $width;
+        }
+      }
+    }
+    @include responsive("small") {
+      @for $i from 0 through 12 {
+        $width: 100% / 12 * $i;
+  
+        .col-s-#{$i},
+        .sm\:col-#{$i}{
+          width: $width;
+        }
+      }
+    }
+
+    @for $i from 1 through 8 {
+      $width: 100% / $i;
+
+      .col-x#{$i} {
+        width: $width;
+      }
+    }
+    @include responsive("xbig") {
+      @for $i from 1 through 8 {
+        $width: 100% / $i;
+      
+        .col-xb-x#{$i},
+        .xb\:col-x#{$i}{
+          width: $width;
+        }
+      }
+    }
+    @include responsive("large") {
+      @for $i from 1 through 8 {
+        $width: 100% / $i;
+      
+        .col-l-x#{$i},
+        .lg\:col-x#{$i} {
+          width: $width;
+        }
+      }
+    }
+    @include responsive("medium") {
+      @for $i from 1 through 8 {
+        $width: 100% / $i;
+      
+        .col-m-x#{$i},
+        .md\:col-x#{$i}{
+          width: $width;
+        }
+      }
+    }
+    @include responsive("small") {
+      @for $i from 1 through 8 {
+        $width: 100% / $i;
+      
+        .col-s-x#{$i},
+        .sm\:col-x#{$i}{
+          width: $width;
+        }
+      }
+    }
+
   }
 }
